--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,18 @@
-/reference/human*
-/reference/1000G*
-/reference/dbsnp*
-/reference/Mills*
-/reference/hapmap*
+human*
+1000G*
+dbsnp*
+Mills*
+hapmap*
+Homo*
+Mutect*
+af-only*
+small_exac*
 /bin/gatk-4.1.3.0/*
 /bin/*bam
+/bin/*bai
+/reference/oncotator_v1_ds_April052016/*
+/son/*
+._*
+.DS*
+/output/father*
+/output/son*
