--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,18 @@ Mutect*
 af-only*
 small_exac*
 /bin/gatk-4.1.3.0/*
+common*
+wes-do-gc*
 /bin/*bam
 /bin/*bai
 /reference/oncotator_v1_ds_April052016/*
 ._*
 .DS*
+reference/pon.hdf5
+reference/wes.1000Ghighcov.pon.hdf5
+reference/ice_targets.tsv.interval_list
+
+input/SM-74P4M.bam
+input/SM-74P4M.bam.bai
+output/22rv1hic.HC.CNNscore.filtered.vcf.gz
+output/22rv1hic.HC.CNNscore.filtered.vcf.gz.tbi
